err/django-app-plugins.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/app_plugins'...
Compiling './lib/python3.5/site-packages/app_plugins/library.py'...
***   File "./lib/python3.5/site-packages/app_plugins/library.py", line 11
    raise RuntimeError, "No callable recieved."
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/app_plugins/locale'...
Listing './lib/python3.5/site-packages/app_plugins/locale/fr'...
Listing './lib/python3.5/site-packages/app_plugins/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/app_plugins/management'...
Listing './lib/python3.5/site-packages/app_plugins/management/commands'...
Compiling './lib/python3.5/site-packages/app_plugins/management/commands/sync_plugins.py'...
***   File "./lib/python3.5/site-packages/app_plugins/management/commands/sync_plugins.py", line 89
    print "Creating registered PluginPoint:", label
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/app_plugins/models.py'...
***   File "./lib/python3.5/site-packages/app_plugins/models.py", line 24
    if not is_valid_label(name): raise RuntimeError, u"invalid label: " + name
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/app_plugins/templates'...
Listing './lib/python3.5/site-packages/app_plugins/templates/app_plugins'...
Listing './lib/python3.5/site-packages/app_plugins/templatetags'...
Compiling './lib/python3.5/site-packages/app_plugins/templatetags/app_plugins.py'...
***   File "./lib/python3.5/site-packages/app_plugins/templatetags/app_plugins.py", line 170
    raise TemplateSyntaxError, "invalid plugin point name '%s'." % name
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_app_plugins-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
